--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "foody",
+  "proxy": "http://localhost:8080",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.24.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
@@ -20,6 +21,8 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
     "redux": "^4.1.2",
+    "redux-debounced": "^0.5.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
     "striptags": "^3.2.0",
     "web-vitals": "^1.0.1"
